# stegacito

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  SteganoTest.sln  stegacito.sln
.github/workflows/: ccpp.yml
SteganoTest/: SteganoTest.vcxproj  SteganoTest.vcxproj.filters  extracted_hello.txt  extracted_test.xlsx  stegacito.args.json
SteganoTest/res/: test.xlsx
SteganoTest/src/: bitmask.c  common.c  decoder.c  decoder.h  encoder.c  encoder.h  errorcode.h  file.c  file.h  header.h  image.c  launcher.c  version.c
stegacito/: stegacito.args.json  stegacito.vcxproj  stegacito.vcxproj.filters
stegacito/res/: binarytest.xlsx
stegacito/src/: basictype.h  bitmask.h  common.h  decoder.c  encoder.c  errorcode.h  file.c  header.c  image.c  image.h  launcher.c  stg_bitmask.c  stg_bitmask.h  stg_common.c  stg_common.h  stg_decoder.c  stg_decoder.h  stg_encoder.c  stg_file.c  stg_file.h  stg_header.c  stg_header.h  stg_image.c  stg_image.h  stg_launcher.c  stg_verbose.c  stg_verbose.h  stg_version.c  stg_version.h  verbose.c  version.c
